--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="forks_phrase">Forks:</string>
+    <string name="watchers_phrase">Watchers:</string>
+    <string name="issues_phrase">Issues:</string>
+    <string name="search_repos_phrase">Search repos..</string>
 </resources>
