Setup fully functional app, without sorting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="following_phrase">Following:</string>
     <string name="bio_phrase">Bio:</string>
     <string name="not_defined_phrase">Undefined</string>
+    <string name="intructions_phrase">Write a word and search through GitHub repos!</string>
+    <string name="no_results_phrase">Seems like there is no such repo here. Check for typos and try again!</string>
 </resources>
