--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="following_phrase">Following:</string>
     <string name="bio_phrase">Bio:</string>
     <string name="not_defined_phrase">Undefined</string>
-    <string name="instructions_phrase">Write a word and search through GitHub repos!</string>
+    <string name="instructions_phrase">Write a query and search through GitHub repos!</string>
     <string name="no_results_phrase">Seems like there is no such repo here. Check for typos and try again!</string>
     <string name="search_repos_title">GitHub Repo Browser</string>
     <string name="sort_by_phrase">Sort by..</string>
