--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="sort_by_phrase">Sort by..</string>
     <string name="user_not_found_phrase">We can\'t fetch the user data. Something is fishy here.. Check your internet connection and try again!</string>
     <string name="by_phrase">by</string>
+    <string name="sorting_bottom_sheet_title">Sort by</string>
 </resources>
